# Onslaught

./: .gitignore  CMakeLists.txt  README.md
assets/maps/: test_map.txt
assets/shaders/: fragment.glsl  vertex.glsl
includes/: game.h  types.h
includes/gameplay/: player.h
includes/maps/: map.h  tile.h
includes/platform/macos/: window.h
includes/platform/opengl/: textureLoader.h
includes/platform/windows/: window.h
includes/rendering/: orthographicCamera.h  renderer2D.h  shader.h  sprite.h  texture2D.h
includes/state/: gameState.h  mainMenu.h  overworld.h  splashScreen.h  state.h
includes/utility/: resourceLoader.h  systemTimer.h
libraries/glad/include/glad/: glad.h
libraries/glad/src/: glad.c
libraries/glfw-3.3.9/docs/html/: jquery.js
libraries/glm/: CMakeLists.txt
source/: game.cpp  main.cpp
source/gameplay/: player.cpp
source/maps/: map.cpp  tile.cpp
source/platform/macos/: macOSWindow.cpp  systemTimer.cpp
source/platform/opengl/: textureLoader.cpp
source/platform/windows/: systemTimer.cpp  windowsWindow.cpp
source/rendering/: orthographicCamera.cpp  renderer2D.cpp  shader.cpp  sprite.cpp  texture2D.cpp
source/state/: gameState.cpp  mainMenu.cpp  overworld.cpp  splashScreen.cpp
source/utility/: resourceLoader.cpp
